--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,18 @@
 language: node_js
 node_js:
-  - "node"
+  - "12.16.3"
+
+branches:
+  only:
+    - develop
+
+before_script:
+  - npm install -g firebase-tools
+  - npm install -g preact-cli
+  - npm install
+
 script:
   -
-deploy:
-  provider: firebase
-  token:
-    secure: "1//0ehNFguE7teXSCgYIARAAGA4SNwF-L9Ir_dcIiSy7_gxgPr1i3Oaj5p4d7j5jBgJR6JaW7uvaHttHcIofJGHwArnU6dQglbL50_Q"
-  project: "bantay-bayan"
-  message: "Deployed Bantay Bayan to Firebase Hosting"
+
+after_success:
+  - firebase deploy --token $FIREBASE_TOKEN
