--- a/.travis.yml
+++ b/.travis.yml
@@ -7,10 +7,7 @@ branches:
     - develop
 
 before_script:
-  - npm install -g firebase-tools
+  - sudo npm install -g firebase-tools
 
 script:
-  -
-
-after_success:
   - firebase deploy --token $FIREBASE_TOKEN
