--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ branches:
     - develop
 
 before_script:
-  - sudo npm install -g firebase-tools
+  - npm install -g firebase-tools
 
 script:
   - firebase deploy --token $FIREBASE_TOKEN
