--- a/.travis.yml
+++ b/.travis.yml
@@ -10,4 +10,4 @@ before_script:
   - npm install -g firebase-tools
 
 script:
-  - firebase deploy --token $FIREBASE_TOKEN
+  - firebase deploy --only hosting:bantay-bayan --token $FIREBASE_TOKEN
